Update AsymmetricMain.java